--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -233,7 +233,7 @@
                 style="--i: 1; --clr: #0a66c2"
               >
                 <a
-                  href="https://www.linkedin.com/in/kathrin-peled-draculady/"
+                  href="https://www.linkedin.com/in/kathrin-peled/"
                   target="_blank"
                   rel="noopener noreferrer"
                   aria-label="LinkedIn profile of Kathrin Peled, opens in a new tab"
@@ -241,7 +241,7 @@
                     ><i
                       class="fa-brands fa-linkedin"
                       aria-hidden="true"
-                      title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
+                      title="LinkedIn: https://www.linkedin.com/in/kathrin-peled/"
                     ></i></span
                   >LinkedIn</a
                 >
@@ -287,30 +287,9 @@
                 >
               </li>
               <li
-                data-text="Skype"
-                class="skype-list-item"
-                style="--i: 4; --clr: #00aff0"
-              >
-                <a
-                  href="skype:live:.cid.fa37e5044b0a120f?chat"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Skype contact, opens in Skype app"
-                >
-                  <span>
-                    <i
-                      class="fa-brands fa-skype"
-                      aria-hidden="true"
-                      title="Skype: live:.cid.fa37e5044b0a120f"
-                    ></i>
-                  </span>
-                  Skype
-                </a>
-              </li>
-              <li
                 data-text="Discord"
                 class="discord-list-item"
-                style="--i: 5; --clr: #5865f2"
+                style="--i: 4; --clr: #5865f2"
               >
                 <a
                   href="https://discord.com/users/draculadycode"
@@ -357,7 +336,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.linkedin.com/in/kathrin-peled-draculady/"
+                      href="https://www.linkedin.com/in/kathrin-peled/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="LinkedIn profile of Kathrin Peled, opens in a new tab"
@@ -365,7 +344,7 @@
                       <i
                         class="fa-brands fa-linkedin"
                         aria-hidden="true"
-                        title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
+                        title="LinkedIn: https://www.linkedin.com/in/kathrin-peled/"
                       ></i>
                     </a>
                   </li>
@@ -410,7 +389,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://www.facebook.com/profile.php?id=61563925780935"
                       target="_blank"
@@ -424,7 +403,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://x.com/DraculadyKath"
                       target="_blank"
@@ -438,7 +417,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://app.netlify.com/teams/draculadycode/sites"
                       target="_blank"
@@ -453,7 +432,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://vercel.com/kathrins-projects-926c884c"
                       target="_blank"
@@ -496,7 +475,7 @@
                       ></i
                     ></a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://discord.com/users/draculadycode"
                       target="_blank"
@@ -524,7 +503,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="viber://chat?number=+4917685639174"
                       target="_blank"
@@ -538,7 +517,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="skype:live:.cid.fa37e5044b0a120f"
                       target="_blank"
@@ -552,7 +531,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://m.me/61563925780935"
                       target="_blank"
