--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -235,7 +235,7 @@
                 style="--i: 1; --clr: #0a66c2"
               >
                 <a
-                  href="https://www.linkedin.com/in/kathrin-peled-draculady/"
+                  href="https://www.linkedin.com/in/kathrin-peled/"
                   target="_blank"
                   rel="noopener noreferrer"
                   aria-label="LinkedIn profile of Kathrin Peled, opens in a new tab"
@@ -243,7 +243,7 @@
                     ><i
                       class="fa-brands fa-linkedin"
                       aria-hidden="true"
-                      title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
+                      title="LinkedIn: https://www.linkedin.com/in/kathrin-peled/"
                     ></i></span
                   >LinkedIn</a
                 >
@@ -289,30 +289,9 @@
                 >
               </li>
               <li
-                data-text="Skype"
-                class="skype-list-item"
-                style="--i: 4; --clr: #00aff0"
-              >
-                <a
-                  href="skype:live:.cid.fa37e5044b0a120f?chat"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Skype contact, opens in Skype app"
-                >
-                  <span>
-                    <i
-                      class="fa-brands fa-skype"
-                      aria-hidden="true"
-                      title="Skype: live:.cid.fa37e5044b0a120f"
-                    ></i>
-                  </span>
-                  Skype
-                </a>
-              </li>
-              <li
                 data-text="Discord"
                 class="discord-list-item"
-                style="--i: 5; --clr: #5865f2"
+                style="--i: 4; --clr: #5865f2"
               >
                 <a
                   href="https://discord.com/users/draculadycode"
@@ -359,7 +338,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.linkedin.com/in/kathrin-peled-draculady/"
+                      href="https://www.linkedin.com/in/kathrin-peled/"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="LinkedIn profile of Kathrin Peled, opens in a new tab"
@@ -367,7 +346,7 @@
                       <i
                         class="fa-brands fa-linkedin"
                         aria-hidden="true"
-                        title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
+                        title="LinkedIn: https://www.linkedin.com/in/kathrin-peled/"
                       ></i>
                     </a>
                   </li>
@@ -412,7 +391,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://www.facebook.com/profile.php?id=61563925780935"
                       target="_blank"
@@ -426,7 +405,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://x.com/DraculadyKath"
                       target="_blank"
@@ -440,7 +419,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://app.netlify.com/teams/draculadycode/sites"
                       target="_blank"
@@ -455,7 +434,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://vercel.com/kathrins-projects-926c884c"
                       target="_blank"
@@ -498,7 +477,7 @@
                       ></i
                     ></a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://discord.com/users/draculadycode"
                       target="_blank"
@@ -526,7 +505,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="viber://chat?number=+4917685639174"
                       target="_blank"
@@ -540,7 +519,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="skype:live:.cid.fa37e5044b0a120f"
                       target="_blank"
@@ -554,7 +533,7 @@
                       ></i>
                     </a>
                   </li>
-                  <li>
+                  <li style="display: none">
                     <a
                       href="https://m.me/61563925780935"
                       target="_blank"
