--- a/index-german.html
+++ b/index-german.html
@@ -184,7 +184,7 @@
                     Aktueller Status</span
                   >
                   Ich lebe in Berlin und werde meine Ausbildung zur
-                  Webentwicklerin im Februar 2025 abschließen.
+                  Webentwicklerin im April 2025 abschließen.
                   <br />
                   Meine Ausbildung am DCI hat mir Zugang zu einer Vielzahl von
                   Webtechnologien verschafft, darunter HTML, CSS, JavaScript und
@@ -294,9 +294,8 @@
                   EU-Mitgliedstaat, bin ich berechtigt, sofort ohne zusätzliche
                   Dokumente oder Visa zu arbeiten.
                   <br />
-                  Nach Abschluss meiner Weiterbildung am DCI im Februar 2025
-                  werde ich entweder ein zweimonatiges Praktikum oder eine
-                  Festanstellung suchen, um meine berufliche Laufbahn zu
+                  Nach Abschluss meiner Weiterbildung am DCI im April 2025 werde
+                  ich eine feste Stelle suchen, um meine berufliche Laufbahn zu
                   beginnen.
                   <br />
                   Dabei interessiere ich mich insbesondere für Positionen, die
@@ -307,6 +306,15 @@
                   Mir ist bewusst, dass sich die Branche stetig
                   weiterentwickelt. Darum bin ich auf der Suche nach
                   Weiterbildungen oder Gelegenheiten für Selbststudium.
+                  <br />
+                  <br />
+                  Gleichzeitig bin ich offen für Stellen in anderen Bereichen,
+                  in denen ich bereits Erfahrung habe, wie zum Beispiel
+                  Vertrieb, Kundenbetreuung oder administrative Tätigkeiten.
+                  Mein Hintergrund als Verkäuferin, RMA-Sachbearbeiterin,
+                  SAP-Nutzerin und Buchhalterin hat mir wertvolle
+                  organisatorische, problemlösende Fähigkeiten sowie einen
+                  starken Fokus auf Kundenzufriedenheit vermittelt.
                 </p>
               </div>
               <div class="about-text-box">
