--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     Current Status
                   </span>
                   I am based in Berlin, I am set to complete my studies as a web
-                  developer in February 2025.
+                  developer in April 2025.
                   <br />
                   My education at DCI has exposed me to a wide range of web
                   technologies, including HTML, CSS, JavaScript, and various
@@ -289,9 +289,8 @@
                   state, I am eligible to work immediately without needing
                   additional documents or visas.
                   <br />
-                  Upon completing my Weiterbildung at DCI in February 2025, I
-                  will be seeking either a two-month internship or a permanent
-                  position to begin my professional journey.
+                  Upon completing my Weiterbildung at DCI in April 2025, I will
+                  be seeking a permanent position to begin my professional journey.
                   <br />
                   I am particularly interested in roles that focus on front-end
                   development, where I can contribute my skills while learning
@@ -300,6 +299,10 @@
                   Additionally, I am open to learning new technologies and
                   techniques related to web development to enhance my skill set
                   and adapt to the evolving industry.
+                  <br />
+                  <br />
+                  At the same time, I am open to roles in other fields where I already have experience, such as sales, customer support, or administrative positions.
+                  My background as a salesperson, RMA clerk, SAP user, and bookkeeper has provided me with valuable organizational, problem-solving, and customer service skills.
                 </p>
               </div>
               <div class="about-text-box">
